[package]
name = "proxy_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
dirs = "5.0.1"
env_logger = "0.10.0"
gethostname = "0.4.3"
libc = "0.2.149"
log = "0.4.20"
prometheus-scrape = "0.1.1"
reqwest = "0.11.22"
rouille = "3.6.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[lib]
name = "proxyclient"
path = "src/lib.rs"
crate-type = ["cdylib"]      # Creates dynamic lib
# crate-type = ["staticlib"] # Creates static lib

[[bin]]
name = "proxy_v2"
path = "src/main.rs"
