[package]
name = "proxy_v2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
static-files = "0.2.3"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
env_logger = "0.10.0"
gethostname = "0.4.3"
libc = "0.2.149"
log = "0.4.20"
prometheus-parse = "0.2.4"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
retry = "2.0.0"
rouille = "3.6.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
static-files = "0.2.3"
sysinfo = "0.29.10"
url = "2.4.1"

[lib]
name = "proxyclient"
path = "src/lib.rs"
crate-type = ["cdylib"]      # Creates dynamic lib
# crate-type = ["staticlib"] # Creates static lib

[[bin]]
name = "proxy_v2"
path = "src/main.rs"

[[bin]]
name = "proxy_run"
path = "src/launcher.rs"
